--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,10 +32,10 @@
       </div>
     </div>
   </div>
-  <!-- <div class="category-container">
-    <div class="background-block"></div>
-    <div class="content-block"></div>
-  </div> -->
+
+  <div class="categories">
+    <category></category>
+  </div>
 
   <!-- <div class="canvas-container">
     <div></div>
