--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,40 +8,48 @@
 
 <div class="fake-body">
 
-  <div class="home-container">
-    <div class="leftside">
-      <p>CREATIVE</p>
-      <p>DEVELOPER</p>
-      <div class="header-image"></div>
-      <p>THUTHUKA KHUMALO</p>
-    </div>
-    <div class="rightside">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-        numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-        optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
-        obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-        nihil, eveniet aliquid culpa officia au</p>
+  <div id="prewindow">
+    <div class="home-container">
+      <div class="leftside">
+        <p>CREATIVE</p>
+        <p>DEVELOPER</p>
+        <div class="header-image"></div>
+        <p>THUTHUKA KHUMALO</p>
+      </div>
+      <div class="rightside">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+          molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+          numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+          optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
+          obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
+          nihil, eveniet aliquid culpa officia au</p>
 
-      <div class="more-below-containter">
-        <div class="dashed-circle"></div>
-        <div class="down-arrow"></div>
-        <div class="arrow-text">
-          <p>projects</p>
+        <div class="more-below-containter">
+          <div class="dashed-circle"></div>
+          <div class="down-arrow"></div>
+          <div class="arrow-text">
+            <p>projects</p>
+          </div>
         </div>
       </div>
     </div>
+
+    <div class="categories">
+      <category>
+        <div class="category-text">graphic design</div>
+      </category>
+      <category>
+        <div class="category-text">web design</div>
+      </category>
+      <category>
+        <div class="category-text">web development</div>
+      </category>
+      <category>
+        <div class="category-text">other</div>
+      </category>
+    </div>
   </div>
 
-  <div class="categories">
-    <category></category>
-  </div>
+  <window></window>
 
-  <!-- <div class="canvas-container">
-    <div></div>
-  </div>
-
-  <div class="canvas-container">
-    <div></div>
-  </div> -->
 </div>
