--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -3,8 +3,8 @@
         <div></div>
     </div>
     <div class="content-block">
-        <div class="content">
-        </div>
+        <div class="content"></div>
+        <ng-content></ng-content>
         <div class="content-shadow"></div>
     </div>
 </div>
