added windows and their borders

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,6 +50,17 @@
     </div>
   </div>
 
-  <window></window>
+  <div class="windows" id="windows">
+    <window>
+      <web-design></web-design>
+    </window>
+    <window>
+      <graphic-design></graphic-design>
+    </window>
+    <window>
+      <web-dev></web-dev>
+    </window>
+    <window></window>
+  </div>
 
 </div>
