--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,1 +1,6 @@
-<div class="window-container"></div>
+<div class="window-container">
+    <div class="fake-border"></div>
+    <div class="window-content">
+        <ng-content></ng-content>
+    </div>
+</div>
