--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -131,6 +131,22 @@ category {
     text-transform: uppercase;
 }
 
+.windows {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    width: 100%;
+}
+
+window {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @media(max-width: 1073px) {
 
     /*lg*/
