--- a/src/app/window/window.component.css
+++ b/src/app/window/window.component.css
@@ -1,5 +1,20 @@
 .window-container {
-    background-color: aqua;
-    width: 90vw;
-    height: 80vh;
+    position: relative;
+    width: 98%;
+    height: 95%;
+}
+
+.fake-border {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: peru;
+}
+
+.window-content {
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 99%;
+    height: 98%;
 }
