--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,6 +1,6 @@
 <div [@isInView]="isInView ? 'inView' : 'notInView'" class="window-container">
     <div class="fake-border"></div>
-    <div [id]="name + '-container'" [class]="'window-content container ' + backgroundClass" (scroll)="checkScrollHit()">
+    <div [id]="name + '-container'" [class]="'window-content container ' + backgroundClass + (scrolling ? '' : ' disable-scrolling')" (scroll)="checkScrollHit()">
         <ng-content></ng-content>
     </div>
 </div>
