--- a/src/app/windows/graphic-design/graphic-design.component.html
+++ b/src/app/windows/graphic-design/graphic-design.component.html
@@ -1,1 +1,23 @@
-<div style="height: 120vh;">dev</div>
+<p class="title">Graphic Design</p>
+<p class="description">Description Text Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+    molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+    numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+    optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
+    obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
+    nihil, eveniet aliquid culpa officia au</p>
+<div class="card-container">
+    <div class="text-container">
+        <div class=""></div>
+    </div>
+    <div class="image-container">
+        <div class=""></div>
+    </div>
+</div>
+<div class="card-container reverse-card">
+    <div class="text-container">
+        <div class=""></div>
+    </div>
+    <div class="image-container">
+        <div class=""></div>
+    </div>
+</div>
