--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -147,6 +147,21 @@ window {
     justify-content: center;
 }
 
+web-design {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+graphic-design {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 83%;
+    gap: 5.3rem;
+    padding-bottom: 8rem;
+}
+
 @media(max-width: 1073px) {
 
     /*lg*/
