--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -151,6 +151,9 @@ web-design {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 83%;
+    gap: 5.3rem;
+    padding-bottom: 8rem;
 }
 
 graphic-design {
