--- a/src/app/windows/web-design/web-design.component.css
+++ b/src/app/windows/web-design/web-design.component.css
@@ -3,3 +3,60 @@
     color: #FFFFFF;
     font-size: 120pt;
 }
+
+.process {
+    font-family: Segoe-UI;
+    color: #FFFFFF;
+    font-size: 22pt;
+    text-align: center;
+}
+
+.content-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.process {
+    flex-basis: 40%;
+}
+
+.showcase {
+    flex-basis: 55%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.card-container {
+    width: 100%;
+    height: 39vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.reverse-card {
+    flex-direction: row-reverse;
+}
+
+.reverse-card>.image-container {
+    margin-right: -10%;
+}
+
+.image-container {
+    /* background-color: #363636; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #FFFFFF;
+    font-size: 30pt;
+    width: 40%;
+    height: 67%;
+    margin-left: -10%;
+}
+
+.text-container {
+    background-color: #5A2E12;
+    width: 60%;
+    height: 100%;
+}
