--- a/src/app/windows/web-design/web-design.component.html
+++ b/src/app/windows/web-design/web-design.component.html
@@ -1,2 +1,29 @@
 <p class="title">Web Design</p>
-<div style="height: 120vh;">dev</div>
+<div class="content-container">
+    <div class="process">
+        <p>Description Text Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+            molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+            numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+            optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
+            obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
+            nihil, eveniet aliquid culpa officia au</p>
+    </div>
+    <div class="showcase">
+        <div class="card-container">
+            <div class="text-container">
+                <div class=""></div>
+            </div>
+            <div class="image-container">
+                <div class="">Project Title</div>
+            </div>
+        </div>
+        <div class="card-container reverse-card">
+            <div class="text-container">
+                <div class=""></div>
+            </div>
+            <div class="image-container">
+                <div class="">Project Title</div>
+            </div>
+        </div>
+    </div>
+</div>
