--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<sidebar style="display: none;"></sidebar>
+<sidebar [windows]="windows" (scrollToSection)="scrollTo($event)"></sidebar>
 <div class="topbar">
   <div>
     <p>THUTHKA KHUMALO</p>
