--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -10,35 +10,42 @@
 }
 
 .sidebar {
-    padding: 3rem 0rem;
-    height: 40%;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    font-family: Neue-Montreal;
+    text-transform: capitalize;
+    /* gap: 1rem; */
 }
 
 .sidebar>div {
     width: 100%;
     height: 1.7rem;
-    background-color: grey;
     display: flex;
+    gap: 0.6rem;
 }
 
 .bar {
     padding: 10px 0px;
-    flex: 40%;
+    flex-basis: 25%;
 }
 
 .bar>div {
     background-color: white;
     height: 100%;
+    cursor: pointer;
+}
+
+.bar>div:hover {
+    box-shadow: 3px 4px grey;
 }
 
 .bar-text {
-    flex: 60%;
+    flex-basis: 60%;
     display: flex;
     align-items: center;
     font-size: 25pt;
     color: white;
+    opacity: 0%;
 }
