--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,16 +35,17 @@
     </div>
 
     <div class="categories">
-      <category (click)="scrollTo('wedDesignWindow')">
+      <category (click)="scrollTo('wedDesignWindow')" marginLeft="-27%" background="radial-gradient(#d6eef6, #e5d7f4)">
         <div class="category-text">web design</div>
       </category>
-      <category (click)="scrollTo('graphicDesignWindow')">
+      <category (click)="scrollTo('graphicDesignWindow')" marginLeft="15%"
+        background="radial-gradient(#B2876E, #9C5323)">
         <div class="category-text">graphic design</div>
       </category>
-      <category (click)="scrollTo('webDevWindow')">
+      <category (click)="scrollTo('webDevWindow')" marginLeft="-16%" background="radial-gradient(#9199A1, #5B6164)">
         <div class="category-text">web development</div>
       </category>
-      <category>
+      <category marginLeft="-29%" background="radial-gradient(#232623, #56B560)">
         <div class="category-text">other</div>
       </category>
     </div>
