--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,9 +1,9 @@
 <div class="category-container">
-    <div class="background-block">
+    <div class="background-block" [style]="'margin-left: ' + marginLeft + ';'">
         <div></div>
     </div>
     <div class="content-block">
-        <div class="content"></div>
+        <div class="content" [style]="'background: ' + background + ';'"></div>
         <ng-content></ng-content>
         <div class="content-shadow"></div>
     </div>
