--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,7 +1,7 @@
 <div [@isInView]="isInView ? 'inView' : 'notInView'" class="window-container" (@isInView.start)="stateChange()">
     <div class="fake-border"></div>
     <div [class]="'window-content container ' + backgroundClass"></div>
-    <div [id]="name + '-container'" [@content]="contentState" [class]="'window-content container ' + (scrolling ? '' : ' disable-scrolling')" (wheel)="checkScrollHit()">
+    <div [id]="name + '-container'" [@content]="contentState" [class]="'window-content container ' + (scrolling ? '' : ' disable-scrolling')">
         <ng-content></ng-content>
     </div>
 </div>
