--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -166,6 +166,15 @@ graphic-design {
     padding-bottom: 8rem;
 }
 
+web-dev {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 83%;
+    gap: 5.3rem;
+    padding-bottom: 8rem;
+}
+
 @media(max-width: 1073px) {
 
     /*lg*/
