--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,5 +1,5 @@
 <div [@isInView]="isInView ? 'inView' : 'notInView'" class="window-container" (@isInView.start)="stateChange()">
-    <div class="fake-border"></div>
+    <div class="fake-border" [style]="'background-color: ' + borderColor + ';'"></div>
     <div [class]="'window-content container ' + backgroundClass"></div>
     <div [id]="name + '-container'" [@content]="contentState" [class]="'window-content container ' + (scrolling ? '' : ' disable-scrolling')">
         <ng-content></ng-content>
