--- a/src/app/windows/web-dev/web-dev.component.html
+++ b/src/app/windows/web-dev/web-dev.component.html
@@ -3,13 +3,15 @@
     <div class="skillset">
         <p>Skill Set</p>
         <div class="skill-display" *ngFor="let i of [1, 2, 3, 4]">
-            <div class="skill-icon"></div>
+            <div class="skill-icon js-icon"></div>
             <div class="skill-body">
                 <div class="skill-text">
                     <p>JavaScript</p>
-                    <p>60%</p>
+                    <p>4 years</p>
                 </div>
-                <div class="skill-bar"></div>
+                <div class="skill-bar">
+                    <div class="skill-bar-percent"></div>
+                </div>
             </div>
         </div>
     </div>
@@ -28,4 +30,3 @@
         </div>
     </div>
 </div>
-<div style="height: 120vh;"></div>
