removed lorem, and added projects

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,12 +17,15 @@
         <p>THUTHUKA KHUMALO</p>
       </div>
       <div class="rightside">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
           molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
           numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
           optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
           obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-          nihil, eveniet aliquid culpa officia au</p>
+          nihil, eveniet aliquid culpa officia au</p> -->
+        <p>I'm a web developer with experience in building websites from the ground up.</p>
+        <p>Before any HTML is written, I
+          create a website mockup in Adobe XD to preview what the final product would look like to the client.</p>
 
         <div class="more-below-containter">
           <div class="dashed-circle"></div>
