--- a/src/app/windows/web-design/web-design.component.html
+++ b/src/app/windows/web-design/web-design.component.html
@@ -1,12 +1,16 @@
 <p class="title">Web Design</p>
 <div class="content-container">
     <div class="process">
-        <p>Description Text Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+        <!-- <p>Description Text Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
             molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
             numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
             optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
             obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-            nihil, eveniet aliquid culpa officia au</p>
+            nihil, eveniet aliquid culpa officia au</p> -->
+        <p>
+            A good website is one that is built before any HTML is written. I have experiencein working in UI/UX applications such as Adobe XD and Figma.
+            Whether it be a proffestional presenting website, or a more lighteheared modern one I can make a good mockup on it
+        </p>
     </div>
     <div class="showcase">
         <div class="card-container">
@@ -14,7 +18,7 @@
                 <div class=""></div>
             </div>
             <div class="image-container">
-                <div class="">Project Title</div>
+                <div class="">Hippy/Alternative News Website</div>
             </div>
         </div>
         <div class="card-container reverse-card">
@@ -22,7 +26,7 @@
                 <div class=""></div>
             </div>
             <div class="image-container">
-                <div class="">Project Title</div>
+                <div class="">Waterpolo management Website</div>
             </div>
         </div>
     </div>
