--- a/src/app/windows/graphic-design/graphic-design.component.html
+++ b/src/app/windows/graphic-design/graphic-design.component.html
@@ -1,16 +1,21 @@
 <p class="title">Graphic Design</p>
-<p class="description">Description Text Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+<!-- <p class="description">Description Text Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
     molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
     numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
     optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
     obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-    nihil, eveniet aliquid culpa officia au</p>
+    nihil, eveniet aliquid culpa officia au</p> -->
+    <p class="description">
+        What is a hight quality software without good Typography and Custom icons. Good Typography means that the user can more easily
+        navigate a website and find what they are looking for. Good icons call the user to certain actions, without having to be instructed with text.
+
+    </p>
 <div class="card-container">
     <div class="text-container">
         <div class=""></div>
     </div>
     <div class="image-container">
-        <div class=""></div>
+        <div class="">Custom Menu stands for displaying QR codes</div>
     </div>
 </div>
 <div class="card-container reverse-card">
@@ -18,6 +23,14 @@
         <div class=""></div>
     </div>
     <div class="image-container">
+        <div class="">Custom Background gradient's matched with a border</div>
+    </div>
+</div>
+<div class="card-container">
+    <div class="text-container">
         <div class=""></div>
+    </div>
+    <div class="image-container">
+        <div class="">3D model and display of t-shirt design for client</div>
     </div>
 </div>
