public ready changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,7 @@
       <category (click)="scrollTo('webDevWindow')" marginLeft="-16%" background="radial-gradient(#9199A1, #5B6164)">
         <div class="category-text">web development</div>
       </category>
-      <category marginLeft="-29%" background="radial-gradient(#232623, #56B560)">
+      <category style="display: none;" marginLeft="-29%" background="radial-gradient(#232623, #56B560)">
         <div class="category-text">other</div>
       </category>
     </div>
