--- a/src/app/windows/web-design/web-design.component.css
+++ b/src/app/windows/web-design/web-design.component.css
@@ -44,7 +44,6 @@
 }
 
 .image-container {
-    /* background-color: #363636; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -54,9 +53,22 @@
     height: 67%;
     margin-left: -10%;
 }
+.image-container > div {
+    text-shadow: -4px 5px 2px #3e3e3e;
+}
 
 .text-container {
     background-color: #5A2E12;
     width: 60%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.text-container > div {
+    background-position: center;
+    background-size: cover;
+    width: 88%;
+    height: 90%;
 }
