--- a/src/app/windows/web-design/web-design.component.html
+++ b/src/app/windows/web-design/web-design.component.html
@@ -15,7 +15,7 @@
     <div class="showcase">
         <div class="card-container">
             <div class="text-container">
-                <div class=""></div>
+                <div style="background-image: url(../../../assets/images/Web-Design/hippy_news_preview.png);"></div>
             </div>
             <div class="image-container">
                 <div class="">Hippy/Alternative News Website</div>
@@ -23,10 +23,10 @@
         </div>
         <div class="card-container reverse-card">
             <div class="text-container">
-                <div class=""></div>
+                <div style="background-image: url(../../../assets/images/Web-Design/tournements_preview.png);"></div>
             </div>
             <div class="image-container">
-                <div class="">Waterpolo management Website</div>
+                <div class="">Waterpolo Team Management Wireframe</div>
             </div>
         </div>
     </div>
