--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -73,8 +73,9 @@
     margin: 1.6rem 0rem;
     height: 12rem;
     width: 90%;
-    background-image: url(../assets/images/image.jpg);
+    background-image: url(../assets/images/laughing_proffesional.jpg);
     background-position: center;
+    background-size: cover;
 }
 
 .more-below-containter {
