--- a/src/app/windows/graphic-design/graphic-design.component.css
+++ b/src/app/windows/graphic-design/graphic-design.component.css
@@ -32,10 +32,57 @@
     width: 40%;
     height: 67%;
     margin-left: -10%;
+    padding: 0px 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.image-container > div {
+    color: white;
+    font-size: 27pt;
+    text-align: center;
 }
 
 .text-container {
     background-color: #555555;
     width: 60%;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.wait-less-display {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    gap: 0.8rem;
+}
+.wait-less-display > div {
+    flex-basis: 40%;
+    height: 47%;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.backgrounds-display {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    gap: 0.8rem;
+}
+.backgrounds-display > div {
+    flex-basis: 40%;
+    height: 47%;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
