--- a/src/app/windows/graphic-design/graphic-design.component.html
+++ b/src/app/windows/graphic-design/graphic-design.component.html
@@ -12,7 +12,12 @@
     </p>
 <div class="card-container">
     <div class="text-container">
-        <div class=""></div>
+        <div class="wait-less-display">
+            <div style="background-image: url(../../../assets/images/Graphic-Design/cassa_capri_screenshot.png);"></div>
+            <div style="background-image: url(../../../assets/images/Graphic-Design/billi_bi_screenshot.png);"></div>
+            <div style="background-image: url(../../../assets/images/Graphic-Design/cassa_capri_table_talker.png);"></div>
+            <div style="background-image: url(../../../assets/images/Graphic-Design/billi_bi_table_talker.png);"></div>
+        </div>
     </div>
     <div class="image-container">
         <div class="">Custom Menu stands for displaying QR codes</div>
@@ -20,7 +25,12 @@
 </div>
 <div class="card-container reverse-card">
     <div class="text-container">
-        <div class=""></div>
+        <div class="backgrounds-display">
+            <div style="background-image: url(../../../assets/images/Grey-Noisy-Gradient.png);"></div>
+            <div style="background-image: url(../../../assets/images/image.jpg);"></div>
+            <div style="background-image: url(../../../assets/images/Noisy-Gradient.png);"></div>
+            <div style="background-image: url(../../../assets/images/Pastelle-Noisy-Gradient.png);"></div>
+        </div>
     </div>
     <div class="image-container">
         <div class="">Custom Background gradient's matched with a border</div>
@@ -28,7 +38,7 @@
 </div>
 <div class="card-container">
     <div class="text-container">
-        <div class=""></div>
+        <img style="height: 85%;" src="../../../assets/images/Graphic-Design/real_friends_final_Trim.gif" alt="Spinning top">
     </div>
     <div class="image-container">
         <div class="">3D model and display of t-shirt design for client</div>
