--- a/src/app/windows/web-dev/web-dev.component.css
+++ b/src/app/windows/web-dev/web-dev.component.css
@@ -32,12 +32,13 @@
 }
 
 .skill-icon {
-    height: 100%;
+    height: 120%;
     flex-basis: 18%;
     flex-basis: 18%;
     /* background-color: blue; */
     background-position: center;
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .js-icon {
@@ -67,7 +68,7 @@
     left: 0px;
     height: 100%;
     top: 0px;
-    width: 59%;
+    /* width: 59%; */
     background: white;
 }
 
@@ -90,7 +91,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 0.5rem;
+    gap: 1.1rem;
 }
 
 .project {
@@ -109,4 +110,15 @@
     background: #697176;
     height: 30vh;
     width: 42vh;
+    display: flex;
+    align-items: center;
+}
+
+.project-text {
+    display: flex;
+    flex-direction: column;
+    font-family: Segoe-UI-Italic;
+    font-size: 14pt;
+    padding: 9px 23px;
+    gap: 0.8rem;
 }
