--- a/src/app/windows/graphic-design/graphic-design.component.html
+++ b/src/app/windows/graphic-design/graphic-design.component.html
@@ -6,7 +6,7 @@
     obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
     nihil, eveniet aliquid culpa officia au</p> -->
     <p class="description">
-        What is a hight quality software without good Typography and Custom icons. Good Typography means that the user can more easily
+        What is a high quality software without good Typography and Custom icons. Good Typography means that the user can more easily
         navigate a website and find what they are looking for. Good icons call the user to certain actions, without having to be instructed with text.
 
     </p>
