--- a/src/app/windows/web-dev/web-dev.component.html
+++ b/src/app/windows/web-dev/web-dev.component.html
@@ -22,7 +22,7 @@
             optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
             obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
             nihil, eveniet aliquid culpa officia au</p> -->
-        <p class="project-fluff">It has been 4 years since rented my first web server. I didnt know how to code HTML,
+        <p class="project-fluff">It has been 4 years since I rented my first web server. I didnt know how to code HTML,
             javascript or how to serve a file
             In Hindsight it was'nt the best purchasing desicion for the skillset I had at the time. Since then i have
             learned store data on SQL/NoSQL dataabases.
